--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,87 @@
     text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
 }
+
+
+
+
+.card {
+    background-color: #8B4513; 
+    color: white; 
+    border: none;
+    height: 100%; 
+    display: flex;
+    flex-direction: column; 
+}
+
+.card-img-top {
+    max-height: 200px; 
+    object-fit: contain;
+    width: 100%; 
+    background-color: #F4A460; 
+}
+
+.card-body {
+    padding: 15px;
+    background-color: #A0522D; 
+}
+
+.card-title {
+    background-color: #D2691E; 
+    padding: 10px;
+    color: white;
+}
+
+.card-text {
+    background-color: #CD853F; 
+    padding: 10px;
+    color: white;
+}
+
+.list-group-item {
+    background-color: #C8AD7D; 
+    color: white;
+}
+
+.btn-primary {
+    background-color: #704214; 
+    border-color: #5C3317;
+}
+
+
+html, body {
+    height: 100%; 
+    margin: 0; 
+}
+
+body {
+    display: flex;
+    flex-direction: column; 
+}
+
+.main-content {
+    flex: 1; 
+}
+
+
+.search-container {
+    display: flex;         
+    justify-content: center; 
+    margin: 20px 0;        
+}
+
+#buscador-input {
+    max-width: 600px;     
+    width: 100%;            
+    padding: 10px;       
+    font-size: 16px;         
+}
+
+
+footer {
+    background-color: #b5651d;
+    color: white;
+    padding: 10px 0; 
+    text-align: center; 
+    margin-top: auto; 
+}
