--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 
-
 .navbar {
     background-color: #b5651d;
     padding: 10px 0;
@@ -57,21 +56,64 @@
     }
 }
 
-
-
-
-
-/* Modo oscuro */
 .dark-mode {
     background-color: #3e2a1f; 
     color: #f5f5f5; 
 }
 
-/* Modo claro */
+
 .light-mode {
     background-color: #dd9971; 
     color: #3e2a1f; 
 }
+
+
+.boton-light {
+    background-color: #dd9971; 
+    color: #3e2a1f; 
+    border: none;
+    padding: 15px 30px; 
+    border-radius: 10px; 
+    font-size: 16px; 
+    margin-top: 20px; 
+    margin-bottom: 30px; 
+    margin-right: 20px; 
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    position: relative; 
+    float: right; 
+}
+
+
+.boton-dark {
+    background-color: #3e2a1f; 
+    color: #f5f5f5; 
+    border: none;
+    padding: 15px 30px; 
+    border-radius: 10px;
+    font-size: 16px; 
+    margin-top: 20px; 
+    margin-bottom: 30px; 
+    margin-right: 20px; 
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    position: relative; 
+    float: right; 
+}
+
+
+#toggle-button:hover {
+    opacity: 0.8;
+}
+
+
+.botonera {
+    display: flex;
+    justify-content: flex-end; 
+}
+
+
+
 
 
 
@@ -130,6 +172,22 @@
     color: white;
 }
 
+.card-footer {
+    text-align: center;
+}
+
+.eliminar-producto {
+    background-color: #d9534f; 
+    border-color: #d43f3a;
+    color: white;
+}
+
+.eliminar-producto:hover {
+    background-color: #c9302c;
+    border-color: #ac2925;
+}
+
+
 .list-group-item {
     background-color: #C8AD7D; 
     color: white;
@@ -177,3 +235,151 @@ footer {
     text-align: center; 
     margin-top: auto; 
 }
+
+
+
+.titulo-cafe {
+    text-align: center; 
+    color: #F5DEB3;
+    background-color: #8B4513; 
+    padding: 20px; 
+    border-radius: 8px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
+    margin: 20px 0; 
+}
+
+
+
+.info-section {
+    background-color: #F4A460; 
+    color: #3e2a1f; 
+    border: 2px solid #8B4513; 
+    border-radius: 10px; 
+    padding: 20px; 
+    max-width: 800px; 
+    margin: 20px auto; 
+}
+
+
+.info-title {
+    text-align: center; 
+    color: #3e2a1f; 
+    margin-bottom: 15px; 
+}
+
+
+.info-content {
+    line-height: 1.6;
+    font-size: 16px; 
+}
+
+.form-container {
+    background-color: #F4A460; 
+    border: 2px solid #8B4513; 
+    border-radius: 10px; 
+    padding: 20px; 
+    max-width: 800px; 
+    margin: 20px auto; 
+}
+
+.form-container form {
+    display: flex; 
+    flex-direction: column; 
+    gap: 15px; 
+}
+
+.form-container input[type="text"],
+.form-container input[type="number"],
+.form-container input[type="email"] {
+    padding: 10px; 
+    border-radius: 5px; 
+    border: 1px solid #8B4513; 
+}
+
+.form-container input[type="submit"] {
+    background-color: #8B4513; 
+    color: #fff; 
+    border: none;
+    padding: 10px; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    transition: background-color 0.3s; 
+}
+
+.form-container input[type="submit"]:hover {
+    background-color: #704214; 
+}
+
+
+.info-container {
+    background-color: #F4A460; 
+    border: 2px solid #8B4513;
+    border-radius: 10px; 
+    padding: 20px; 
+    max-width: 800px; 
+    margin: 20px auto; 
+    position: relative; 
+}
+
+.info-title {
+    text-align: center; 
+    color: #3e2a1f; 
+    margin-bottom: 15px; 
+    font-size: 24px; 
+    font-weight: bold; 
+}
+
+.info-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px; 
+    padding: 10px;
+    border: 1px solid #8B4513; 
+    border-radius: 8px;
+    background-color: #D2691E; 
+}
+
+.info-item span {
+    flex: 1;
+    color: #fff;
+    font-size: 18px; 
+}
+
+.info-item button {
+    background-color: #8B4513; 
+    color: #fff; 
+    border: none;
+    padding: 8px 15px; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    transition: background-color 0.3s; 
+    font-size: 16px; 
+}
+
+.info-item button:hover {
+    background-color: #704214; 
+}
+
+
+.info-container .btn-container {
+    text-align: center; 
+    margin-top: 20px;
+}
+
+.info-container .btn-container button {
+    background-color: #8B4513; 
+    color: #fff; 
+    border: none;
+    padding: 12px 25px; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    transition: background-color 0.3s; 
+    font-size: 18px; 
+}
+
+.info-container .btn-container button:hover {
+    background-color: #704214; 
+}
+
+
